--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
-		"@mantine/core": "7.14.1",
-		"@mantine/hooks": "7.14.1",
+		"@mantine/core": "^7.16.0",
+		"@mantine/hooks": "^7.16.0",
+		"@reduxjs/toolkit": "^2.4.0",
 		"@tabler/icons-react": "^3.22.0",
 		"@vitejs/plugin-legacy": "^5.4.3",
 		"classnames": "^2.5.1",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-redux": "^9.1.2",
-		"react-router-dom": "^7.0.0",
-		"@reduxjs/toolkit": "^2.4.0"
+		"react-router-dom": "^7.0.0"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.13.0",
