--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"private": true,
 	"version": "0.0.1",
 	"type": "module",
+	"homepage": "https://vezuchiy-patsan.github.io/myIMusicSearch",
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc -b && vite build",
@@ -38,6 +39,7 @@
 		"eslint-plugin-react-hooks": "^5.0.0",
 		"eslint-plugin-react-refresh": "^0.4.14",
 		"eslint-plugin-unused-imports": "^4.1.4",
+		"gh-pages": "^6.3.0",
 		"globals": "^15.11.0",
 		"postcss": "^8.4.49",
 		"postcss-preset-mantine": "^1.17.0",
